# rmatrix

./: Cargo.toml  LICENCE.txt  README.md
src/: main.rs
